--- a/frontend/src/app/layout/analysis/purchase-chart/purchase-chart.component.html
+++ b/frontend/src/app/layout/analysis/purchase-chart/purchase-chart.component.html
@@ -1,10 +1,10 @@
-<!-- <div class="flex">
+<div class="flex">
     <div>
         <mat-form-field class="field-width margin">
             <mat-label>Select date range</mat-label>
             <mat-date-range-input [rangePicker]="picker2">
-                <input matStartDate [(ngModel)]="fromDate" placeholder="Start date">
-                <input matEndDate [(ngModel)]="toDate" placeholder="End date">
+                <input matStartDate [(ngModel)]="startDate" placeholder="Start date">
+                <input matEndDate [(ngModel)]="endDate" placeholder="End date">
             </mat-date-range-input>
             <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
             <mat-date-range-picker #picker2></mat-date-range-picker>
@@ -61,13 +61,13 @@
         <h1 class="center">Purchase Chart</h1>
         <div class="center total-count">
 
-            <span>Total Purchase:<b> {{totalPurchaseInPurchaseChartWise}}</b>, </span>
-            <span>Total Qty: <b> {{totalQtyInPurchaseChartWise}}</b> | </span>
-            <span>Avg Purchase:  <b> {{averagePurchaseInPurchaseChartWise | number: '1.0-0'}}</b>, </span>
-            <span>Avg Qty:   <b> {{averageQtyInPurchaseChartWise | number: '1.0-0'}}</b> </span>
+            <span>Total Purchase:<b> {{purchaseChartSummary.totalSale}}</b>, </span>
+            <span>Total Qty: <b>     {{purchaseChartSummary.totalProfit}}</b> | </span>
+            <span>Avg Purchase:  <b> {{purchaseChartSummary.averageSale | number: '1.0-0'}}</b>, </span>
+            <span>Avg Qty:   <b>     {{purchaseChartSummary.averageProfit | number: '1.0-0'}}</b> </span>
         </div>
     </div>
     <div>
         <div id="purchaseChartData"></div>
     </div>
-</div> -->
+</div>
