--- a/frontend/src/app/layout/dashboard/dashboard.component.html
+++ b/frontend/src/app/layout/dashboard/dashboard.component.html
@@ -3,35 +3,7 @@
     <div>
         <h1 class="center">Today's Summary</h1>
     </div>
-    <!-- summary start -->
-    <div class="summary-container">
-        <div class="summary-content flex justify-content">
-            <div class="center summary-box">
-                <div><b>{{invoice}}</b></div>
-                <div class="primary font-size-14">Invoices</div>
-            </div>
-            <div class="center summary-box">
-                <div><b>₹ {{sales}}</b></div>
-                <div class="primary font-size-14">Sales</div>
-            </div>
-            <div class="center summary-box">
-                <div><b>₹ {{profit}}</b></div>
-                <div class="primary font-size-14">Profit</div>
-            </div>
-            <div class="center summary-box">
-                <div><b>₹ {{payment}}</b></div>
-                <div class="primary font-size-14">Payments</div>
-            </div>
-            <div class="center summary-box">
-                <div><b>{{qty}}</b></div>
-                <div class="primary font-size-14">Qty</div>
-            </div>
-            <div class="center summary-box">
-                <div><b>₹ {{expense}}</b></div>
-                <div class="primary font-size-14">Expenses</div>
-            </div>
-        </div>
-    </div>
+   <app-today-summary></app-today-summary>
     <!-- performance start -->
     <div>
         <h1 class="center">Performance</h1>
@@ -68,71 +40,8 @@
             <div id="dayWiseChartData"></div>
         </div>
     </div>
-    <!-- customer & supplier chart start -->
-    <div class="flex">
-        <!-- customer start -->
-        <div class="customer-chart-width">
-            <div id="customerChartData"></div>
 
-        </div>
-        <!-- supplier start-->
-        <div class="customer-chart-width">
-            <div id="supplierChartData"></div>
-
-        </div>
-    </div>
-    <div class="performance-container">
-        <div class="performance-content flex justify-content">
-            <div class="center summary-box">
-                <div><b>{{invoice}}</b></div>
-                <div class="primary font-size-14">Invoices</div>
-            </div>
-            <div class="center summary-box">
-                <div><b>₹ {{sales}}</b></div>
-                <div class="primary font-size-14">Sales</div>
-            </div>
-            <div class="center summary-box">
-                <div><b>₹ {{profit}}</b></div>
-                <div class="primary font-size-14">Profit</div>
-            </div>
-            <div class="center summary-box">
-                <div><b>₹ {{payment}}</b></div>
-                <div class="primary font-size-14">Payments</div>
-            </div>
-            <div class="center summary-box">
-                <div><b>{{qty}}</b></div>
-                <div class="primary font-size-14">Qty</div>
-            </div>
-            <div class="center summary-box">
-                <div><b>₹ {{expense}}</b></div>
-                <div class="primary font-size-14">Expenses</div>
-            </div>
-        </div>
-    </div>
-    <!-- company status start  -->
-
-    <div>
-        <h1 class="center">Company Status</h1>
-    </div>
-    <div class="performance-content flex justify-content">
-        <div class="center company-box">
-            <div><b>{{customer}}</b></div>
-            <div class="primary font-size-14">Customers</div>
-        </div>
-        <div class="center  company-box">
-            <div><b>{{supplier}}</b></div>
-            <div class="primary font-size-14">Suppliers</div>
-        </div>
-        <div class="center company-box">
-            <div><b>{{product}}</b></div>
-            <div class="primary font-size-14">Products</div>
-        </div>
-        <div class="center  company-box">
-            <div><b>₹ {{companyBalance}}</b></div>
-            <div class="primary font-size-14">Company Balance</div>
-        </div>
-
-    </div>
-
+<app-customer-suppliers-chart></app-customer-suppliers-chart>
+<app-company-status></app-company-status>
 
 </div>
