--- a/frontend/src/app/layout/analysis/sale-chart/sale-chart.component.html
+++ b/frontend/src/app/layout/analysis/sale-chart/sale-chart.component.html
@@ -1,3 +1,5 @@
+<h1 class="center">Sale Chart</h1>
+
 <div class="flex">
     <div>
         <mat-form-field class="field-width margin">
@@ -60,8 +62,12 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <button color="primary" class=" btn" mat-raised-button (click)="getSaleChart()">
-            Submit
+
+        <button color="primary" class=" btn" mat-raised-button (click)="getSaleChart()" [disabled]="loader">
+            <span *ngIf="!loader"> Submit</span>
+            <span>
+                <mat-spinner *ngIf="loader" diameter="20"></mat-spinner>
+            </span>
         </button>
         <button color="primary" class="margin btn" mat-raised-button>
             Download
@@ -71,12 +77,11 @@
 </div>
 <div>
     <div class="header-content">
-        <h1 class="center">Sale Chart</h1>
         <div class="center total-count">
-            <span>Total Sale:<b> {{saleChartSummary. totalSale}}</b>, </span>
-            <span>Total Qty: <b> {{saleChartSummary. totalProfit}}</b> | </span>
-            <span>Avg Sale:  <b> {{saleChartSummary. averageSale | number: '1.0-0'}}</b>, </span>
-            <span>Avg Qty:   <b> {{saleChartSummary. averageProfit | number: '1.0-0'}}</b> </span>
+            <span>Total Sale:<b> {{saleChartSummary.totalSale}}</b>, </span>
+            <span>Total Qty: <b> {{saleChartSummary.totalProfit}}</b> | </span>
+            <span>Avg Sale:  <b> {{saleChartSummary.averageSale | number: '1.0-0'}}</b>, </span>
+            <span>Avg Qty:   <b> {{saleChartSummary.averageProfit | number: '1.0-0'}}</b> </span>
         </div>
     </div>
     <div>
