--- a/frontend/src/app/layout/dashboard/day-wise-sale-profit-chart/day-wise-sale-profit-chart.component.html
+++ b/frontend/src/app/layout/dashboard/day-wise-sale-profit-chart/day-wise-sale-profit-chart.component.html
@@ -14,9 +14,13 @@
         <mat-date-range-picker #picker></mat-date-range-picker>
     </mat-form-field>
     <!-- button start -->
-    <button color="primary" class=" btn" mat-raised-button (click)="getDayWiseChart()">
-        Submit
+    <button color="primary" class=" btn" mat-raised-button (click)="getDayWiseChart()" [disabled]="loader">
+        <span *ngIf="!loader"> Submit</span>
+        <span>
+            <mat-spinner *ngIf="loader" diameter="20"></mat-spinner>
+        </span>
     </button>
+
 </div>
 <div>
     <!-- day wise chart -->
