--- a/frontend/src/app/layout/analysis/profit-chart/profit-chart.component.html
+++ b/frontend/src/app/layout/analysis/profit-chart/profit-chart.component.html
@@ -1,3 +1,4 @@
+<h1 class="center">Profit Chart</h1>
 <div class="flex">
     <div>
         <mat-form-field class="field-width margin">
@@ -60,9 +61,13 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
-        <button color="primary" class=" btn" mat-raised-button (click)="getProfitChart()">
-            Submit
+        <button color="primary" class="btn" mat-raised-button (click)="getProfitChart()" [disabled]="loader">
+            <span *ngIf="!loader"> Submit</span>
+            <span>
+                <mat-spinner *ngIf="loader" diameter="20"></mat-spinner>
+            </span>
         </button>
+
         <button color="primary" class="margin btn" mat-raised-button>
             Download
         </button>
@@ -70,12 +75,12 @@
 </div>
 <div>
     <div class="header-content">
-        <h1 class="center">Profit Chart</h1>
+
         <div class="center total-count">
-             <span>Total Sale:<b> {{profitChartSummary.totalSale}}</b>, </span>
+            <span>Total Sale:<b> {{profitChartSummary.totalSale}}</b>, </span>
             <span>Total Profit: <b> {{profitChartSummary.totalProfit}}</b> | </span>
-            <span>Avg Sale:  <b> {{profitChartSummary.averageSale | number: '1.0-0'}}</b>, </span>
-            <span>Avg Profit:   <b> {{profitChartSummary.averageProfit | number: '1.0-0'}}</b> </span>
+            <span>Avg Sale: <b> {{profitChartSummary.averageSale | number: '1.0-0'}}</b>, </span>
+            <span>Avg Profit: <b> {{profitChartSummary.averageProfit | number: '1.0-0'}}</b> </span>
         </div>
 
         <div>
