--- a/frontend/src/app/layout/nav/nav.component.html
+++ b/frontend/src/app/layout/nav/nav.component.html
@@ -14,7 +14,7 @@
         [routerLinkActive]="'active'"
         [routerLink]="['/dashboard']"
       >
-        <mat-icon class="sidenav-icon">dashboard</mat-icon> Dashbard
+        <mat-icon class="sidenav-icon">dashboard</mat-icon> Dashboard
       </a>
     </mat-nav-list>
   </mat-sidenav>
