--- a/frontend/src/app/layout/dashboard/customer-suppliers-chart/customer-suppliers-chart.component.html
+++ b/frontend/src/app/layout/dashboard/customer-suppliers-chart/customer-suppliers-chart.component.html
@@ -17,27 +17,27 @@
     <div class="performance-content flex justify-content">
         <div class="center summary-box">
             <div><b>{{invoice}}</b></div>
-            <div class="primary font-size-14">Invoices</div>
+            <a class="primary font-size-14"  [routerLink]="['/sales']">Invoices</a>
         </div>
         <div class="center summary-box">
             <div><b>₹ {{sales}}</b></div>
-            <div class="primary font-size-14">Sales</div>
+            <a class="primary font-size-14"  [routerLink]="['/sales']">Sales</a>
         </div>
         <div class="center summary-box">
             <div><b>₹ {{profit}}</b></div>
-            <div class="primary font-size-14">Profit</div>
+            <a class="primary font-size-14"  [routerLink]="['/sales']">Profit</a>
         </div>
         <div class="center summary-box">
             <div><b>₹ {{payment}}</b></div>
-            <div class="primary font-size-14">Payments</div>
+            <a class="primary font-size-14"  [routerLink]="['/sales']">Payments</a>
         </div>
         <div class="center summary-box">
             <div><b>{{qty}}</b></div>
-            <div class="primary font-size-14">Qty</div>
+            <a class="primary font-size-14"  [routerLink]="['/sales']">Qty</a>
         </div>
         <div class="center summary-box">
             <div><b>₹ {{expense}}</b></div>
-            <div class="primary font-size-14">Expenses</div>
+            <a class="primary font-size-14"  [routerLink]="['/expenses']">Expenses</a>
         </div>
     </div>
 </div>
