--- a/frontend/src/app/layout/analysis/sale-chart/sale-chart.component.html
+++ b/frontend/src/app/layout/analysis/sale-chart/sale-chart.component.html
@@ -79,9 +79,9 @@
     <div class="header-content">
         <div class="center total-count">
             <span>Total Sale:<b> {{saleChartSummary.totalSale}}</b>, </span>
-            <span>Total Qty: <b> {{saleChartSummary.totalProfit}}</b> | </span>
+            <span>Total Qty: <b> {{saleChartSummary.totalQty}}</b> | </span>
             <span>Avg Sale:  <b> {{saleChartSummary.averageSale | number: '1.0-0'}}</b>, </span>
-            <span>Avg Qty:   <b> {{saleChartSummary.averageProfit | number: '1.0-0'}}</b> </span>
+            <span>Avg Qty:   <b> {{saleChartSummary.averageQty| number: '1.0-0'}}</b> </span>
         </div>
     </div>
     <div>
