--- a/frontend/src/app/layout/dashboard/dashboard.component.scss
+++ b/frontend/src/app/layout/dashboard/dashboard.component.scss
@@ -33,8 +33,13 @@
     height: 33px;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
+.summary-box {
 
+    padding: 20px 50px;
+    border-radius: 5px;
+    width: 8%;
+}
