--- a/frontend/src/app/layout/dashboard/company-status/company-status.component.scss
+++ b/frontend/src/app/layout/dashboard/company-status/company-status.component.scss
@@ -16,7 +16,7 @@
 }
 
 .company-box {
-    border: 1px solid black;
+    // border: 1px solid black;
     padding: 20px 70px;
     border-radius: 5px;
     width: 14%;
@@ -66,6 +66,9 @@
     justify-content: center;
 }
 
-a{
+a {
     text-decoration: none;
+}
+.mat-card:not([class*=mat-elevation-z]) {
+    box-shadow: 0px 2px 20px -1px rgb(0 0 0 / 20%), 0px 1px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%), 0px 1px 39px 0px rgb(0 0 0 / 12%);
 }
