--- a/frontend/src/app/layout/dashboard/customer-suppliers-chart/customer-suppliers-chart.component.scss
+++ b/frontend/src/app/layout/dashboard/customer-suppliers-chart/customer-suppliers-chart.component.scss
@@ -26,7 +26,6 @@
 }
 
 .summary-box {
-    border: 1px solid black;
     padding: 20px 50px;
     border-radius: 5px;
     width: 8%;
@@ -34,4 +33,8 @@
 
 a {
     text-decoration: none;
+}
+
+.mat-card:not([class*=mat-elevation-z]) {
+    box-shadow: 0px 2px 20px -1px rgb(0 0 0 / 20%), 0px 1px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%), 0px 1px 39px 0px rgb(0 0 0 / 12%);
 }
