--- a/frontend/src/app/layout/dashboard/today-summary/today-summary.component.scss
+++ b/frontend/src/app/layout/dashboard/today-summary/today-summary.component.scss
@@ -12,20 +12,26 @@
 }
 
 .summary-box {
-    border: 1px solid black;
+    // border: 1px solid black;
     padding: 20px 50px;
     border-radius: 5px;
     width: 8%;
 }
+
 .font-size-14 {
     font-size: 17px;
     padding-top: 8px;
     font-weight: bold;
 }
+
 .primary {
     color: #3f51b5;
 }
 
 a {
     text-decoration: none;
+}
+
+.mat-card:not([class*=mat-elevation-z]) {
+    box-shadow: 0px 2px 20px -1px rgb(0 0 0 / 20%), 0px 1px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%), 0px 1px 39px 0px rgb(0 0 0 / 12%);
 }
