--- a/frontend/src/app/layout/dashboard/day-wise-sale-profit-chart/day-wise-sale-profit-chart.component.html
+++ b/frontend/src/app/layout/dashboard/day-wise-sale-profit-chart/day-wise-sale-profit-chart.component.html
@@ -1,3 +1,4 @@
+<div class="container">
 <!-- performance start -->
 <div>
     <h1 class="center">Performance</h1>
@@ -38,4 +39,5 @@
 </div>
 <div>
     <div id="dayWiseChartData"></div>
+</div>
 </div>
