--- a/frontend/src/app/layout/user/add-user/add-user.component.html
+++ b/frontend/src/app/layout/user/add-user/add-user.component.html
@@ -92,7 +92,7 @@
                     <!-- <mat-card style="width: 100px; display: block;"> -->
 
                         <mat-checkbox [disabled]="!isLoggedInUserIsOwner" (click)="onPermissionChange(permission.key)"
-                        [checked]="permission.value">{{permission.key}}</mat-checkbox>
+                        [checked]="permission.value" color="primary">{{permission.key}}</mat-checkbox>
                     <!-- </mat-card> -->
                     </span>
             </ng-container>
