--- a/frontend/src/app/layout/dashboard/company-status/company-status.component.scss
+++ b/frontend/src/app/layout/dashboard/company-status/company-status.component.scss
@@ -16,7 +16,6 @@
 }
 
 .company-box {
-    // border: 1px solid black;
     padding: 20px 70px;
     border-radius: 5px;
     width: 14%;
@@ -31,44 +30,12 @@
     padding-top: 8px;
     font-weight: bold;
 }
-
-.font-size-14 {
-    font-size: 14px;
-    padding-top: 8px;
-    font-weight: bold;
-}
-
-.main-box {
-    width: 35%;
-    margin: auto;
-}
-
-.main-content-box {
-    border: 1px solid black;
-    width: 150px;
-    height: 150px;
-    border-radius: 50%;
-}
-
-.content-box {
-    border: 1px solid black;
-    width: 130px;
-    height: 130px;
-    border-radius: 50%;
-}
-
-.text-box {
-    text-align: center;
-    margin: 40px auto;
-}
-
-.justify-content-center {
-    justify-content: center;
-}
-
-a {
-    text-decoration: none;
-}
 .mat-card:not([class*=mat-elevation-z]) {
     box-shadow: 0px 2px 20px -1px rgb(0 0 0 / 20%), 0px 1px 10px 0px rgb(0 0 0 / 14%), 0px 1px 18px 0px rgb(0 0 0 / 12%), 0px 1px 39px 0px rgb(0 0 0 / 12%);
+}
+.pointer{
+    cursor: pointer;
+}
+a{
+    text-decoration: none;
 }
